--- a/banking_system/banking_system/templates/branch-detail.html
+++ b/banking_system/banking_system/templates/branch-detail.html
@@ -1,24 +1,15 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row justify-content-center mt-2">
   <div class="col col-md-8">
-    <h1>{{bank.name}}</h1>
+    <h1>{{branch.name}}</h1>
     <h5>Details</h5>
     <div class="card mt-2">
       <div class="card-body">
-        <h6 class="card-subtitle mb-2 text-muted">{{bank.code}}</h6>
-        <p class="card-text">{{bank.address}}</p>
-      </div>
-    </div>
-    <h5 class="mt-3">Branches</h5>
-
-    {% for branch in branches %}
-    <div class="card mt-2">
-      <div class="card-body">
-        <h5 class="card-title">{{branch.name}}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{branch.code}}</h6>
         <p class="card-text">{{branch.address}}</p>
       </div>
     </div>
-    {% endfor %}
+
     <h5 class="mt-3">Transactions</h5>
 
     {% for transaction in transactions %}
