--- a/banking_system/banking_system/templates/base.html
+++ b/banking_system/banking_system/templates/base.html
@@ -70,7 +70,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-4" href="#"
+              <a class="nav-link mr-4" href="{% url 'loan-request' %}"
                 ><i class="fa-solid fa-wallet"></i> Request A Loan
               </a>
             </li>
