--- a/banking_system/banking_system/templates/loan-request.html
+++ b/banking_system/banking_system/templates/loan-request.html
@@ -23,6 +23,10 @@
               {{form.loan_amount|add_class:'form-control form-control-sm'}}
             </div>
             <div class="form-group">
+              <label class="form-label">Loan Type:</label>
+              {{form.loan_type|add_class:'form-control form-control-sm'}}
+            </div>
+            <div class="form-group">
               <label class="form-label">Loan Amount Term (in days):</label>
               {{form.loan_amount_term|add_class:'form-control form-control-sm'}}
             </div>
