--- a/banking_system/banking_system/templates/branch-detail.html
+++ b/banking_system/banking_system/templates/branch-detail.html
@@ -10,6 +10,8 @@
       </div>
     </div>
 
+    {% if transactions %}
+
     <h5 class="mt-3">Transactions</h5>
 
     {% for transaction in transactions %}
@@ -30,7 +32,7 @@
         </p>
       </div>
     </div>
-    {% endfor %}
+    {% endfor %}{% endif %}
   </div>
 </div>
 {% endblock content %}
