--- a/banking_system/banking_system/templates/my-profile.html
+++ b/banking_system/banking_system/templates/my-profile.html
@@ -25,11 +25,11 @@
           <b>Self-Employed</b> : {{user.get_self_employed_display}} <br />
           <b>Married</b> : {{user.get_married_display}} <br />
           <b>Property Area</b> : {{user.get_property_area_display}} <br />
-          <b>Income</b> : {{user.applicant_income}} <br />
+          <b>Income</b> : {{user.applicant_income}}$ <br />
 
           {% if user.co_applicant_income %}
 
-          <b>Co-Applicant Income</b> : {{user.co_applicant_income}}
+          <b>Co-Applicant Income</b> : {{user.co_applicant_income}}$
           <br /><!-- prettier-ignore -->{% endif %}
         </p>
         <button
