indian rupee symbol and validation on loan amount fieldadded
indian rupee symbol and validation on loan amount fieldadded

--- a/banking_system/banking_system/templates/branch-detail.html
+++ b/banking_system/banking_system/templates/branch-detail.html
@@ -17,7 +17,7 @@
     {% for transaction in transactions %}
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title">Amount: {{transaction.amount}}$</h5>
+        <h5 class="card-title">Amount: {{transaction.amount}}&#8377;</h5>
         <h6 class="card-subtitle mb-2 text-muted">
           Transaction Type: {{transaction.transaction_type}}
         </h6>
