--- a/banking_system/banking_system/templates/index.html
+++ b/banking_system/banking_system/templates/index.html
@@ -8,7 +8,7 @@
     {% for transaction in transactions_sent %}
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title">Amount: {{transaction.amount}}$</h5>
+        <h5 class="card-title">Amount: {{transaction.amount}}&#8377;</h5>
         <h6 class="card-subtitle mb-2 text-muted">
           Transaction Type: {{transaction.transaction_type}}
         </h6>
@@ -27,7 +27,7 @@
     {% for transaction in transactions_received %}
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title">Amount: {{transaction.amount}}$</h5>
+        <h5 class="card-title">Amount: {{transaction.amount}}&#8377;</h5>
         <h6 class="card-subtitle mb-2 text-muted">
           Transaction Type: {{transaction.transaction_type}}
         </h6>
