--- a/banking_system/banking_system/templates/loan-request-response.html
+++ b/banking_system/banking_system/templates/loan-request-response.html
@@ -16,7 +16,7 @@
           <b>Bank Branch</b>: {{loan.branch}} <br /><b>Taken At</b>:
           {{loan.created_at}} <br />
           <b>Due Date</b>: {{loan.due_at}} <br /><b>Loan Amount</b>:
-          {{loan.amount}} <br /><b>Loan Status</b>: {{loan.loan_status}}
+          &#8377;{{loan.amount}} <br /><b>Loan Status</b>: {{loan.loan_status}}
           <br />
 
           {% if loan.get_loan_amount_term %}
