--- a/banking_system/banking_system/templates/loans.html
+++ b/banking_system/banking_system/templates/loans.html
@@ -12,7 +12,7 @@
 
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title">Amount: {{loan.amount}}$</h5>
+        <h5 class="card-title">Amount: {{loan.amount}}&#8377;</h5>
         <h6 class="card-subtitle mb-2 text-muted">
           Loan Type: {{loan.get_loan_type_display}}
         </h6>
@@ -87,7 +87,7 @@
     {% for loan in due_loans %}
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title">Amount: {{loan.amount}}$</h5>
+        <h5 class="card-title">Amount: {{loan.amount}}&#8377;</h5>
         <h6 class="card-subtitle mb-2 text-muted">
           Loan Type: {{loan.get_loan_type_display}}
         </h6>
@@ -108,7 +108,7 @@
 
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title">Amount: {{loan.amount}}$</h5>
+        <h5 class="card-title">Amount: {{loan.amount}}&#8377;</h5>
         <h6 class="card-subtitle mb-2 text-muted">
           Loan Type: {{loan.get_loan_type_display}}
         </h6>
@@ -127,7 +127,7 @@
 
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title">Amount: {{loan.amount}}$</h5>
+        <h5 class="card-title">Amount: {{loan.amount}}&#8377;</h5>
         <h6 class="card-subtitle mb-2 text-muted">
           Loan Type: {{loan.get_loan_type_display}}
         </h6>
